--- a/package.json
+++ b/package.json
@@ -11,14 +11,13 @@
         "url": "git+https://github.com/nickwmurphy/smartsafe.git"
     },
     "dependencies": {
-        "bootstrap": "3.3.7",
-        "ejs": "2.5.5",
-        "express": "4.13.3",
-        "serialport": "4.0.7",
-        "socket.io": "1.4.7"
+        "bootstrap": "^3.3.7",
+        "express": "^4.13.3",
+        "serialport": "^4.0.7",
+        "socket.io": "^1.4.7"
     },
     "author": "Nick Murphy",
-    "license": "ISC",
+    "license": "MIT",
     "bugs": {
         "url": "https://github.com/nickwmurphy/smartsafe/issues"
     },
